Update css to resolve CardElement not showing

--- a/src/components/payment_form/payment_form.styles.scss
+++ b/src/components/payment_form/payment_form.styles.scss
@@ -8,8 +8,5 @@
 	.form-container {
 		height: 100px;
 		min-width: 500px;
-    display: flex;
-    flex-direction: column;
-
 	}
 }
